--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "boto3>=1.42.19",
+    "elasticsearch>=9.2.1",
+    "fastapi>=0.128.0",
+    "kafka-python>=2.3.0",
+    "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
+    "sqlalchemy>=2.0.45",
+    "uvicorn>=0.40.0",
+]
